Sun, Dec 7, 2008
---------------------------------------------------------------------
- Work on [campaigns] database schema and model.
- Started with [Campaigns/New], integrated calendar_date_select for start/end dates.

Sat, Dec 6, 2008
---------------------------------------------------------------------
- Implemented account deletion.
- Fixes for header and signup page layout.

Fri, Dec 5, 2008
---------------------------------------------------------------------
- Installed [advanced_errors] plugin to have full control over the message text.
- Implemented [Account/New] validating account data and preserving submitted form values.
- More work on polishing accounts index page.

Thu, Dec 4, 2008
---------------------------------------------------------------------
- Added Preferences controller stub and header link.
- Updated tabs helper to use global settings to show tabs.
- Updated spec fixtures to use randomly generated dates and counts.
- Converted all layouts to haml.

Wed, Dec 3, 2008
---------------------------------------------------------------------
- Added LICENSE file with the GNU Affero General Public License.
- Fixed auto-generated specs to make them all pass.
- Implemented hash methods for user preferences.

Tue, Dec 2, 2008
---------------------------------------------------------------------
- Added [Setting] and [Preference] models.
- Added [campaigns], [leads], and [contacts] scaffolds.
- Added [config/settings.yml] with default application settings.
- Created [lib/tasks/settings.rake] to load default settings to the database.
- Implemented [Setting] model.

Mon, Dec 1, 2008
---------------------------------------------------------------------
- Created [Permission] polymorphic model, added fixtures to load sample users, accounts, and permissions.

Sun, Nov 30, 2008
---------------------------------------------------------------------
- More work on [accounts] model, CSS styles, and [add account] form.

Sat, Nov 29, 2008