@@ -3,36 +3,33 @@
   #contact_intro{ hidden_if(!@account.errors.empty?) }
     You can add contact information later.
   #contact{ hidden_if(@account.errors.empty?) }
-    %table{ :width => "500" }
+    %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
-        %td{ :width => "50%", :valign => "top" }
+        %td{ :valign => :top }
           .label Website:
-          = f.text_field :website, :style => "width:100%"
-        %td
-          &nbsp;&nbsp;&nbsp;
-        %td{ :width => "50%", :valign => "top" }
+          = f.text_field :website, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
           .label Phone:
-          = f.text_field :phone, :style => "width:100%"
+          = f.text_field :phone, :style => "width:240px"
       %tr
-        %td{ :width => "50%", :valign => "top" }
+        %td{ :valign => :top }
           .label Fax:
-          = f.text_field :fax, :style => "width:100%"
-        %td
-          &nbsp;&nbsp;&nbsp;
-        %td{ :width => "50%", :valign => "top" }
+          = f.text_field :fax, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
           .label Fax:
-          = f.text_field :fax, :style => "width:100%"
+          = f.text_field :fax, :style => "width:240px"
       %tr
-        %td{ :width => "50%", :valign => "top" }
+        %td{ :valign => :top }
           .label Billing address:
-          = f.text_area :billing_address, :style =>"width:100%", :rows => 4
-        %td
-          &nbsp;&nbsp;&nbsp;
-        %td{ :width => "50%", :valign => "top" }
+          = f.text_area :billing_address, :style =>"width:240px", :rows => 4
+        %td= spacer
+        %td{ :valign => :top }
           .label
             Shipping address:
             = link_to_function "same as billing", %/$("account_shipping_address").value = $("account_billing_address").value/
-          = f.text_area :shipping_address, :style =>"width:100%", :rows => 4
+          = f.text_area :shipping_address, :style =>"width:240px", :rows => 4
 
 
 
