@@ -1,6 +1,6 @@
 <div class="standalone">
   <% form_for @authentication, :url => authentication_path do |f| %>
-    <div class="tlink">
+    <div class="title_menu">
       Don't have an account? <%= link_to 'Sign Up Now!', signup_path %>
     </div>
     <div class="title">
