@@ -1,0 +1,26 @@
+.subtitle= link_to_function "Campaign Objectives", %w/$("campaign_intro").toggle(); $("campaign").toggle()/
+.section
+  #campaign_intro{ hidden_if(!@campaign.errors.empty?) }
+    You can add campaign objectives later.
+  #campaign{ hidden_if(@campaign.errors.empty?) }
+    %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+      %tr
+        %td{ :valign => :top }
+          .label Budget:
+          = f.text_field :budget, :style => "width:110px; text-align:right;"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Number of leads:
+          = f.text_field :expected_leads, :style => "width:110px; text-align:right;"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Conversion ratio:
+          = f.text_field :expected_conversion, :style => "width:110px; text-align:right;"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Revenue:
+          = f.text_field :expected_revenue, :style => "width:110px; text-align:right;"
+      %tr
+        %td{ :colspan => 7, :valign => :top }
+          .label Objectives:
+          = f.text_area :objectives, :style => "width:500px", :rows => 2
