@@ -1,5 +1,5 @@
 #confirm{ hidden }
-.tlink
+.title_menu
   = link_to("Back to List of Campaigns", campaigns_path) + " | "
   = link_to("Edit", edit_campaign_path(@campaign)) + " | "
   = link_to_function("Delete?", confirm_delete(@campaign))
