@@ -1,5 +1,5 @@
 #confirm{ hidden }
-.tlink
+.title_menu
   = link_to("Back to List of Contacts", contacts_path) + " | "
   = link_to("Edit", edit_contact_path(@contact)) + " | "
   = link_to_function("Delete?", confirm_delete(@contact))
