@@ -1,5 +1,5 @@
 #confirm{ hidden }
-.tlink
+.title_menu
   = link_to("Back to List of Leads", leads_path) + " | "
   = link_to("Edit", edit_lead_path(@lead)) + " | "
   = link_to_function("Delete?", confirm_delete(@lead))
