@@ -1,7 +1,7 @@
 <div class="mainform">
 
   <% form_for @user, :url => profile_path do |f| %>
-    <div class="tlink">
+    <div class="title_menu">
       <%= link_to_function "Change Password", %/alert("Not implemeneted yet.")/ %>
     </div>
     <div class="title">
