@@ -1,7 +1,7 @@
 <div class="standalone">
 
   <% form_for @user, :url => profile_path do |f| %>
-    <div class="tlink">
+    <div class="title_menu">
       Already signed up? <%= link_to "Login Now!", login_path %>
     </div>
     <div class="title">
